--- a/public/index2.html
+++ b/public/index2.html
@@ -11,7 +11,7 @@
   <div class="main-container">
     <div class="search-container">
       <input type="text" class="search-input" id="skill-input" placeholder="What would you like to learn today?" />
-      <i class="fas fa-search search-icon" onclick="handleSubmit()"></i>
+      <i class="fas fa-search search-icon"></i>
 
       <!-- Filter options -->
       <div class="filter-options" id="filter-options" style="display: none;">
@@ -41,7 +41,7 @@
 
   <div class="results-container" id="results-container" style="display: none;"></div>
 
-  <script src="script2.js"></script>
+  <script src="scriptdb.js"></script>
 </body>
 
 </html>
